Fix: added padding to table to show it correctly on small screens

--- a/assets/css/shows_styling.css
+++ b/assets/css/shows_styling.css
@@ -119,11 +119,13 @@ table {
     border-collapse: collapse; 
     background-color: rgba(150, 150, 150, .6);
     margin-top: 50px;
+    z-index: -1;
   }
 
   .center {
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 50px;
   }
 
 table a {
