--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,6 +561,7 @@ input[type=checkbox]{
     display: none;
     font-size: 24px;
     user-select: none;
+    z-index: 1;
 }
 
 @media (max-width: 1100px) {
@@ -574,6 +575,7 @@ input[type=checkbox]{
         padding: 15px 0;
         font-size: 18px;
         align-items: center;
+        z-index: 1;
     }
 
     .menu li:hover {
@@ -594,6 +596,7 @@ input[type=checkbox]{
 
     .hamburger {
         display: block;
+        z-index: 1;
     }
 
     .band-dropdown {
